--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chec/commerce.js": "^2.8.0",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
     "body-scroll-lock": "^4.0.0-beta.0",
     "nuka-carousel": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
